fix making file z-index

--- a/making/making.css
+++ b/making/making.css
@@ -75,7 +75,7 @@ header {
     left: calc(-50vw + 50%);
     right: calc(-50vw + 50%);
     background-color: #d9d9d9;
-    z-index: -2;
+    z-index: -1001;
     pointer-events: none;
 }
 
